--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "async": "^2.0.1",
     "body-parser": "~1.0.1",
     "cassandra-driver": "^3.1.4",
-    "express": "~4.0.0",
-    "mongoose": "~3.6.13"
+    "express": "~4.0.0"
   },
   "author": "This Guy!",
   "license": "MIT",
