--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "myRetail Server",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified! Configure in package.json\" && exit 1"
+    "test": "mocha"
   },
   "repository": "",
   "keywords": [
